# docs/swagger.yaml
@@ -119,7 +119,7 @@ info:
     name: '@a48zhang & @Cg1028'
   description: Backend system of Muxi_Melting
   title: Melting API
-  version: "1.2"
+  version: "1.3"
 paths:
   /join:
     get:
@@ -184,6 +184,39 @@ paths:
       tags:
       - register and login
   /project:
+    delete:
+      consumes:
+      - application/json
+      description: Delete user's project(login required)
+      parameters:
+      - description: the id of the project
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Response'
+      summary: Delete one's project
+      tags:
+      - projects
     get:
       description: Get a project with its id
       parameters:
