# handler/projects.go
@@ -149,20 +149,18 @@ func CreateProject(r *gin.Context) {
 	SendResponse(r, data)
 }
 
-
 // DeleteProject godoc
 //
 //	@Summary		Delete one's project
 //	@Tags			projects
 //	@Description	Delete user's project(login required)
 //	@Accept			application/json
-//	@Param			id				query	string			true	"the id of the project"
-//	@Param			Authorization	header	string			true	"token"
+//	@Param			id				query	string	true	"the id of the project"
+//	@Param			Authorization	header	string	true	"token"
 //	@Produce		json
 //	@Success		200	{object}	handler.Response
 //	@Failure		500	{object}	handler.Response
-//	@Failure		403	{object}	handler.Response
-//	@Failure		401	{object}	handler.Response
+//	@Failure		400	{object}	handler.Response
 //	@Router			/project [delete]
 func DeleteProject(r *gin.Context) {
 	sid := r.Query("id")
@@ -171,16 +169,12 @@ func DeleteProject(r *gin.Context) {
 		return
 	}
 	id, _ := strconv.Atoi(sid)
-	data := db.ProposalInfo{
+	err := model.DeleteProposal(db.ProposalInfo{
 		InfoID: int32(id),
-	}
-	data.UID = 0
-
-	err := model.UpdateSth(data)
+	})
 	if err != nil {
-		SendError(r, err, data, model.ErrorSender(), http.StatusInternalServerError)
+		SendError(r, err, nil, model.ErrorSender(), http.StatusInternalServerError)
 		return
 	}
 	SendResponse(r, model.NoResponse)
 }
-
